# fsmlib

./: .clang-format  .gitignore  404.html  CMakeLists.txt  LICENSE  LICENSE.md  README.md  _config.yml  index.html  index.md  mkdocs.yml
.github/workflows/: compile.yml  documentation.yml  macos.yml  ubuntu.yml
docs/: index.md
examples/usage/: main.cpp
include/fsmlib/: base.hpp  control.hpp  core.hpp  feq.hpp  fsmlib.hpp  io.hpp  linalg.hpp  math.hpp  traits.hpp  view.hpp
search/: search_index.json
tests/: test_control.cpp  test_fsmlib.cpp  test_linalg.cpp  test_math.cpp
